Dragonbane v1.4: Fix translation layout issues, and other display issues

--- a/dragonbane/dragonbane.css
+++ b/dragonbane/dragonbane.css
@@ -2878,7 +2878,7 @@ body .ui-dialog .tab-content .charsheet .repcontainer[data-groupname=repeating_a
 }
 body .ui-dialog .tab-content .charsheet .armor {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   align-self: start;
 }
 body .ui-dialog .tab-content .charsheet .armor .marble-header {
@@ -3027,6 +3027,9 @@ body .ui-dialog .tab-content .charsheet .section--monster-stats .input-label {
 }
 body .ui-dialog .tab-content .charsheet .section--monster-stats .repitem .collapsed {
   display: block !important;
+}
+body .ui-dialog .tab-content .charsheet .display-control--default[type=hidden][value="0"] + .controlled-display {
+  display: none;
 }
 body .ui-dialog .tab-content .charsheet .section--monster-attacks {
   padding-top: 1.5em;
@@ -3519,6 +3522,7 @@ body .ui-dialog .tab-content .charsheet h4, body .ui-dialog .tab-content .charsh
   text-align: left;
   text-transform: uppercase;
   color: var(--accentColor);
+  white-space: pre-wrap;
 }
 body .ui-dialog .tab-content .charsheet h3, body .ui-dialog .tab-content .charsheet [aria-level="3"] {
   font-size: 0.8em;
